Data manager handling of non-zip files
Change-Id: I5dec0ca8f4b48a56de600683caa6debf88238db7